--- a/src/main/resources/templates/habitacion/formulario-nueva-habitacion.html
+++ b/src/main/resources/templates/habitacion/formulario-nueva-habitacion.html
@@ -41,38 +41,38 @@
     <div th:replace="includes/layout :: navbar-crear-habitacion"></div>
     
     <div class="form-container">
-        <h2 class="text-center mb-4 font-weight-bold">Nueva Habitación</h2>
+        <h2 class="text-center mb-4 font-weight-bold">[[#{nueva.habitacion}]]</h2>
 
         <form th:action="@{/habitacion/guardar-habitacion}" th:object="${habitacion}" method="post">
             <div class="row mb-3"> <!-- Utiliza una fila para agrupar los campos -->
                 <div class="col-md-6"> <!-- Divide el espacio en dos columnas -->
                 	<input type="hidden" th:field="*{id}" />
-                    <label for="nombre" class="form-label">Nombre:</label>
+                    <label for="nombre" class="form-label">[[#{contacto.nombre}]]:</label>
                     <input type="text" class="form-control" id="nombre" th:field="*{nombre}" required />
                 </div>
                 <div class="col-md-6"> <!-- Divide el espacio en dos columnas -->
-                    <label for="precio" class="form-label">Precio:</label>
+                    <label for="precio" class="form-label">[[#{ver.precio}]]:</label>
                     <input type="number" class="form-control" id="precio" th:field="*{precio}" required />
                 </div>
             </div>
             <div class="mb-3">
-                <label for="estado" class="form-label">Estado:</label>
+                <label for="estado" class="form-label">[[#{ver.estado}]]:</label>
                 <select class="form-select" id="estado" th:field="*{estado}" required>
                     <option th:each="estado : ${estados}" th:value="${estado.estado}" th:text="${estado.estado}"></option>
                 </select>
             </div>
             <div class="mb-3">
-                <label for="residencia" class="form-label">Residencia:</label>
+                <label for="residencia" class="form-label">[[#{residencia}]]:</label>
                 <input type="number" class="form-control" id="residencia" th:field="*{residencia.id}" required />
             </div>
             <div class="mb-3">
-                <label for="usuario" class="form-label">Usuario:</label>
+                <label for="usuario" class="form-label">[[#{login.usuario}]]:</label>
                 <input type="number" class="form-control" id="usuario" th:field="*{usuario.id}" />
             </div>
             
             <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-primary">Crear</button>
-                <a class="btn btn-danger" href="/habitacion/ver-habitaciones" role="button">Cancelar</a>
+                <button type="submit" class="btn btn-primary">[[#{guardar}]]</button>
+                <a class="btn btn-danger" href="/habitacion/ver-habitaciones" role="button">[[#{cancelar}]]</a>
             </div>
         </form>
     </div>
