--- a/src/main/resources/templates/habitacion/habitaciones-por-residencia.html
+++ b/src/main/resources/templates/habitacion/habitaciones-por-residencia.html
@@ -9,31 +9,31 @@
     
     
     <div class="container">
-    <h2 class="text-center my-4 font-weight-bold">Habitaciones por residencia</h2>
+    <h2 class="text-center my-4 font-weight-bold">[[#{hab.residencia}]]</h2>
 
     <table class="table mt-4 table-striped">
         <thead>
             <tr>
-						<th>ID</th>
-                        <th>Nombre</th>
-                        <th>Precio</th>
-                        <th>Estado</th>
-                        <th>Usuario</th>
-                        <th>Acciones</th>
+						<th>[[#{ID}]]</th>
+                        <th>[[#{contacto.nombre}]]</th>
+                        <th>[[#{ver.precio}]]</th>
+                        <th>[[#{ver.estado}]]</th>
+                        <th>[[#{login.usuario}]]</th>
+                        <th>[[#{ver.accion}]]</th>
             </tr>
         </thead>
         <tbody>
                     <tr th:each="habitacion : ${habitaciones}">
-                        <td th:text="${habitacion.id}">1</td>
-                        <td th:text="${habitacion.nombre}">Nombre</td>
-                        <td th:text="'$' + ${habitacion.precio}">Precio</td>
-                        <td th:text="${habitacion.estado}">Estado</td>
-                        <td th:text="${habitacion.usuario.userName}">Usuario</td>
+                        <td th:text="${habitacion.id}"></td>
+                        <td th:text="${habitacion.nombre}"></td>
+                        <td th:text="'$' + ${habitacion.precio}"></td>
+                        <td th:text="${habitacion.estado}"></td>
+                        <td th:text="${habitacion.usuario.userName}"></td>
                         <td>
                         <!-- Botón de editar -->
-                        <a th:href="@{'/habitacion/editar/' + ${habitacion.id}}" class="btn btn-warning btn-sm">Editar</a>
+                        <a th:href="@{'/habitacion/editar/' + ${habitacion.id}}" class="btn btn-warning btn-sm">[[#{editar}]]</a>
                         <!-- Botón de eliminar -->
-                        <a th:href="@{'/habitacion/eliminar/' + ${habitacion.id} + '?usuarioId=' + ${habitacion.usuario.id}}" class="btn btn-danger btn-sm">Eliminar</a>
+                        <a th:href="@{'/habitacion/eliminar/' + ${habitacion.id} + '?usuarioId=' + ${habitacion.usuario.id}}" class="btn btn-danger btn-sm">[[#{eliminar}]]</a>
                         
                     	</td>
                     </tr>
