--- a/src/main/resources/templates/includes/layout.html
+++ b/src/main/resources/templates/includes/layout.html
@@ -61,6 +61,53 @@
 		</nav>
 	</div>
 	
+	<!-- NAVBAR USUARIO VER HABITACIONES -->
+	<div th:fragment="navbar-usuario-ver-habitaciones">
+		<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #003B95;">
+		    <a class="navbar-brand" href="/">
+		        <img th:src="@{/img/logo.png}" alt="HotelStiven" width="30" height="30" class="d-inline-block align-text-top">
+		        HotelStiven
+		    </a>
+		
+		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+		        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		        <span class="navbar-toggler-icon"></span>
+		    </button>
+		
+		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		        <ul class="navbar-nav ml-auto">
+		            <!-- Aquí está el idioma -->
+		            <li class="nav-item dropdown">
+		                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
+		                    aria-expanded="false">
+		                    <img th:src="@{/img/idioma.png}" alt="Dropdown" width="20" height="20"
+		                        style="margin-right: 5px;">[[#{nav.idioma}]]
+		                </a>
+		                <div class="dropdown-menu">
+		                    <a class="dropdown-item" th:href="@{/usuario/ver-habitaciones/{residenciaId}(residenciaId=${residenciaId}, lang='es')}">[[#{nav.idioma.espanol}]]</a>
+		                    <a class="dropdown-item" th:href="@{/usuario/ver-habitaciones/{residenciaId}(residenciaId=${residenciaId}, lang='en')}">[[#{nav.idioma.ingles}]]</a>
+		                </div>
+		            </li>
+		            <li class="nav-item">
+		                <a class="nav-link" href="/admin/ver-residencias">Admin</a>
+		            </li>
+		            <li class="nav-item">
+		                <a class="nav-link" href="/">[[#{nav.inicio}]]</a>
+		            </li>
+		            <li class="nav-item">
+		                <a class="nav-link" href="#nosotros">[[#{nav.nosotros}]]</a>
+		        	</li>
+		        	<li class="nav-item">
+		                <a class="nav-link" href="/login">[[#{nav.iniciar-sesion}]]</a>
+		        	</li>
+		        	<form th:action="@{/logout}" method="post">
+		        <button type="submit" class="btn btn-danger mt-3">[[#{nav.cerrar-sesion}]]</button>
+		    </form>
+		        </ul>
+		    </div>
+		</nav>
+	</div>
+	
 	<!-- NAVBAR ADMIN VER-->
 	<div th:fragment="navbar-admin-ver">
 		<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #003B95;">
