--- a/src/main/resources/templates/includes/layout.html
+++ b/src/main/resources/templates/includes/layout.html
@@ -39,6 +39,7 @@
 		                <div class="dropdown-menu">
 		                    <a class="dropdown-item" th:href="@{/(lang=es)}">[[#{nav.idioma.espanol}]]</a>
 		                    <a class="dropdown-item" th:href="@{/(lang=en)}">[[#{nav.idioma.ingles}]]</a>
+		                    <a class="dropdown-item" th:href="@{/(lang=fr)}">[[#{nav.idioma.frances}]]</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
@@ -86,6 +87,7 @@
 		                <div class="dropdown-menu">
 		                    <a class="dropdown-item" th:href="@{/usuario/ver-habitaciones/{residenciaId}(residenciaId=${residenciaId}, lang='es')}">[[#{nav.idioma.espanol}]]</a>
 		                    <a class="dropdown-item" th:href="@{/usuario/ver-habitaciones/{residenciaId}(residenciaId=${residenciaId}, lang='en')}">[[#{nav.idioma.ingles}]]</a>
+		                    <a class="dropdown-item" th:href="@{/usuario/ver-habitaciones/{residenciaId}(residenciaId=${residenciaId}, lang='fr')}">[[#{nav.idioma.frances}]]</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
@@ -131,8 +133,9 @@
 		                        style="margin-right: 5px;">[[#{nav.idioma}]]
 		                </a>
 		                <div class="dropdown-menu">
-		                    <a class="dropdown-item" th:href="@{/admin/ver-residencias(lang=es)}">Español</a>
-		                    <a class="dropdown-item" th:href="@{/admin/ver-residencias(lang=en)}">Inglés</a>
+		                    <a class="dropdown-item" th:href="@{/admin/ver-residencias(lang=es)}">[[#{nav.idioma.espanol}]]</a>
+		                    <a class="dropdown-item" th:href="@{/admin/ver-residencias(lang=en)}">[[#{nav.idioma.ingles}]]</a>
+		                    <a class="dropdown-item" th:href="@{/admin/ver-residencias(lang=fr)}">[[#{nav.idioma.frances}]]</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
@@ -181,8 +184,9 @@
 		                        style="margin-right: 5px;">[[#{nav.idioma}]]
 		                </a>
 		                <div class="dropdown-menu">
-		                    <a class="dropdown-item" th:href="@{/admin/crear-residencia(lang=es)}">Español</a>
-		                    <a class="dropdown-item" th:href="@{/admin/crear-residencia(lang=en)}">Inglés</a>
+		                    <a class="dropdown-item" th:href="@{/admin/crear-residencia(lang=es)}">[[#{nav.idioma.espanol}]]</a>
+		                    <a class="dropdown-item" th:href="@{/admin/crear-residencia(lang=en)}">[[#{nav.idioma.ingles}]]</a>
+		                    <a class="dropdown-item" th:href="@{/admin/crear-residencia(lang=fr)}">[[#{nav.idioma.frances}]]</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
@@ -231,8 +235,9 @@
 		                        style="margin-right: 5px;">[[#{nav.idioma}]]
 		                </a>
 		                <div class="dropdown-menu">
-		                    <a class="dropdown-item" th:href="@{/habitacion/crear-habitacion(lang=es)}">Español</a>
-		                    <a class="dropdown-item" th:href="@{/habitacion/crear-habitacion(lang=en)}">Inglés</a>
+		                    <a class="dropdown-item" th:href="@{/habitacion/crear-habitacion(lang=es)}">[[#{nav.idioma.espanol}]]</a>
+		                    <a class="dropdown-item" th:href="@{/habitacion/crear-habitacion(lang=en)}">[[#{nav.idioma.ingles}]]</a>
+		                    <a class="dropdown-item" th:href="@{/habitacion/crear-habitacion(lang=fr)}">[[#{nav.idioma.frances}]]</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
@@ -281,8 +286,9 @@
 		                        style="margin-right: 5px;">[[#{nav.idioma}]]
 		                </a>
 		                <div class="dropdown-menu">
-		                    <a class="dropdown-item" th:href="@{/habitacion/ver-habitaciones(lang=es)}">Español</a>
-		                    <a class="dropdown-item" th:href="@{/habitacion/ver-habitaciones(lang=en)}">Inglés</a>
+		                    <a class="dropdown-item" th:href="@{/habitacion/ver-habitaciones(lang=es)}">[[#{nav.idioma.espanol}]]</a>
+		                    <a class="dropdown-item" th:href="@{/habitacion/ver-habitaciones(lang=en)}">[[#{nav.idioma.ingles}]]</a>
+		                    <a class="dropdown-item" th:href="@{/habitacion/ver-habitaciones(lang=fr)}">[[#{nav.idioma.frances}]]</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
@@ -331,8 +337,9 @@
 		                        style="margin-right: 5px;">[[#{nav.idioma}]]
 		                </a>
 		                <div class="dropdown-menu">
-		                    <a class="dropdown-item" th:href="@{/habitacion/residencia/{residenciaId}(residenciaId=${residenciaId}, lang='es')}">Español</a>
-    <a class="dropdown-item" th:href="@{/habitacion/residencia/{residenciaId}(residenciaId=${residenciaId}, lang='en')}">Inglés</a>
+		                    <a class="dropdown-item" th:href="@{/habitacion/residencia/{residenciaId}(residenciaId=${residenciaId}, lang='es')}">[[#{nav.idioma.espanol}]]</a>
+    						<a class="dropdown-item" th:href="@{/habitacion/residencia/{residenciaId}(residenciaId=${residenciaId}, lang='en')}">[[#{nav.idioma.ingles}]]</a>
+    						<a class="dropdown-item" th:href="@{/habitacion/residencia/{residenciaId}(residenciaId=${residenciaId}, lang='fr')}">[[#{nav.idioma.frances}]]</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
@@ -381,8 +388,9 @@
 		                        style="margin-right: 5px;">[[#{nav.idioma}]]
 		                </a>
 		                <div class="dropdown-menu">
-		                    <a class="dropdown-item" th:href="@{/habitacion/usuario/{usuarioId}(usuarioId=${usuarioId}, lang='es')}">Español</a>
-    						<a class="dropdown-item" th:href="@{/habitacion/usuario/{usuarioId}(usuarioId=${usuarioId}, lang='en')}">Inglés</a>
+		                    <a class="dropdown-item" th:href="@{/habitacion/usuario/{usuarioId}(usuarioId=${usuarioId}, lang='es')}">[[#{nav.idioma.espanol}]]</a>
+    						<a class="dropdown-item" th:href="@{/habitacion/usuario/{usuarioId}(usuarioId=${usuarioId}, lang='en')}">[[#{nav.idioma.ingles}]]</a>
+    						<a class="dropdown-item" th:href="@{/habitacion/usuario/{usuarioId}(usuarioId=${usuarioId}, lang='fr')}">[[#{nav.idioma.frances}]]</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
@@ -434,6 +442,7 @@
 		                <div class="dropdown-menu">
 		                    <a class="dropdown-item" th:href="@{/login(lang=es)}">[[#{nav.idioma.espanol}]]</a>
 		                    <a class="dropdown-item" th:href="@{/login(lang=en)}">[[#{nav.idioma.ingles}]]</a>
+		                    <a class="dropdown-item" th:href="@{/login(lang=fr)}">[[#{nav.idioma.frances}]]</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
@@ -469,6 +478,7 @@
 		                <div class="dropdown-menu">
 		                    <a class="dropdown-item" th:href="@{/registrarse(lang=es)}">[[#{nav.idioma.espanol}]]</a>
 		                    <a class="dropdown-item" th:href="@{/registrarse(lang=en)}">[[#{nav.idioma.ingles}]]</a>
+		                    <a class="dropdown-item" th:href="@{/registrarse(lang=fr)}">[[#{nav.idioma.frances}]]</a>
 		                </div>
 		            </li>
 		            <li class="nav-item">
