Correción de ruta

--- a/src/main/resources/templates/habitacion/ver-habitaciones.html
+++ b/src/main/resources/templates/habitacion/ver-habitaciones.html
@@ -59,14 +59,14 @@
         function redirectToUserHabitaciones() {
             var usuarioId = document.getElementById('usuarioId').value;
             if (usuarioId) {
-                window.location.href = 'http://localhost:8080/habitacion/usuario/' + usuarioId;
+                window.location.href = 'http://localhost/habitacion/usuario/' + usuarioId;
             }
         }
         
         function redirectToResidenciaHabitaciones() {
             var residenciaId = document.getElementById('residenciaId').value;
             if (residenciaId) {
-                window.location.href = 'http://localhost:8080/habitacion/residencia/' + residenciaId;
+                window.location.href = 'http://localhost/habitacion/residencia/' + residenciaId;
             }
         }
     </script>    
